// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown/presenters/OptionPresenter renders with all props 1`] = `
.emotion-1 {
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  box-sizing: border-box;
  min-height: 36px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0 8px;
  cursor: pointer;
  color: #3c3c3c;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.428571429;
  background-color: rgba(128,128,128,0.08);
}

.emotion-0 {
  fill: #087AAD;
  pointer-events: none;
}

.emotion-0 > * {
  fill: #087AAD;
  pointer-events: none;
}

<div
  aria-selected={true}
  className="emotion-1"
  disabled={undefined}
  id={undefined}
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onMouseMove={[Function]}
  role="option"
  tabIndex="0"
>
  <span>
    <p>
      hi
    </p>
  </span>
  <div>
    <svg
      className="emotion-0"
      color="#087AAD"
      height="16px"
      viewBox="0 0 16 16"
      width="16px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        checkmark-s
      </title>
      <path
        d="M6.2 12L2 8.1l1.3-1.3 2.9 2.7L12.7 3 14 4.3 6.2 12z"
      />
    </svg>
  </div>
</div>
`;

exports[`Dropdown/presenters/OptionPresenter renders without props 1`] = `
.emotion-0 {
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  box-sizing: border-box;
  min-height: 36px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0 8px;
  cursor: pointer;
  color: #3c3c3c;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.428571429;
  background-color: transparent;
}

<div
  aria-selected={undefined}
  className="emotion-0"
  disabled={undefined}
  id={undefined}
  onClick={undefined}
  onKeyDown={undefined}
  onMouseDown={undefined}
  onMouseMove={undefined}
  role="option"
  tabIndex="0"
>
  <span />
</div>
`;
